tests/query_errors/pipeline_undefined/error.txt
Error: 
    1 | create pipeline snot;
      | ^^^^^^^^^^^^^^^^^^^^ Unknown pipeline `snot`